[gd_scene load_steps=61 format=3 uid="uid://vt8tjqvvccud"]

[ext_resource type="Texture2D" uid="uid://c7fawkhthpm32" path="res://Assets/Fighters/LiuKang/idle.png" id="1_b7rtl"]
[ext_resource type="Script" path="res://Scripts/liu_kang.gd" id="1_o0xhx"]
[ext_resource type="Texture2D" uid="uid://b53d6h5jotg6o" path="res://Assets/Fighters/LiuKang/KickBicicleta_strip4.png" id="3_rkc6n"]
[ext_resource type="Texture2D" uid="uid://ioxks6xaguid" path="res://Assets/Fighters/LiuKang/jump.png" id="3_rskb6"]
[ext_resource type="Texture2D" uid="uid://dnw8ub8bij4k7" path="res://Assets/Fighters/LiuKang/jumpFireDragon.png" id="4_0h7mr"]
[ext_resource type="Texture2D" uid="uid://cxskjfwt6tx3w" path="res://Assets/Fighters/LiuKang/walk.png" id="4_81tlj"]
[ext_resource type="Texture2D" uid="uid://76hxjlferwjd" path="res://Assets/Fighters/LiuKang/skill1.png" id="4_paw7p"]
[ext_resource type="Texture2D" uid="uid://xsbuhfurnq1u" path="res://Assets/Fighters/LiuKang/FrontPunch.png" id="5_6wufe"]
[ext_resource type="Texture2D" uid="uid://dwice7hnk6wqc" path="res://Assets/Fighters/LiuKang/Punch.png" id="6_008xp"]
[ext_resource type="Texture2D" uid="uid://cljcu87ppnwfj" path="res://Assets/Fighters/LiuKang/Kick.png" id="6_f5lf2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3aa8w"]
atlas = ExtResource("5_6wufe")
region = Rect2(0, 0, 65, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4yn4"]
atlas = ExtResource("5_6wufe")
region = Rect2(65, 0, 65, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5d47"]
atlas = ExtResource("5_6wufe")
region = Rect2(130, 0, 65, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_wajqs"]
atlas = ExtResource("5_6wufe")
region = Rect2(195, 0, 65, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kdpp"]
atlas = ExtResource("5_6wufe")
region = Rect2(260, 0, 65, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xonh"]
atlas = ExtResource("5_6wufe")
region = Rect2(325, 0, 65, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_s20b2"]
atlas = ExtResource("3_rkc6n")
region = Rect2(0, 0, 72, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8f1m"]
atlas = ExtResource("3_rkc6n")
region = Rect2(72, 0, 72, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow1bp"]
atlas = ExtResource("3_rkc6n")
region = Rect2(144, 0, 72, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivx3k"]
atlas = ExtResource("3_rkc6n")
region = Rect2(216, 0, 72, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wnbn"]
atlas = ExtResource("1_b7rtl")
region = Rect2(0, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jogx"]
atlas = ExtResource("1_b7rtl")
region = Rect2(49, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx5wj"]
atlas = ExtResource("1_b7rtl")
region = Rect2(98, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jxgl"]
atlas = ExtResource("1_b7rtl")
region = Rect2(147, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pck2"]
atlas = ExtResource("1_b7rtl")
region = Rect2(196, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_702fh"]
atlas = ExtResource("1_b7rtl")
region = Rect2(245, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wns1"]
atlas = ExtResource("1_b7rtl")
region = Rect2(294, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yi1n"]
atlas = ExtResource("1_b7rtl")
region = Rect2(343, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_oal76"]
atlas = ExtResource("1_b7rtl")
region = Rect2(392, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp8g3"]
atlas = ExtResource("1_b7rtl")
region = Rect2(441, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_etr4f"]
atlas = ExtResource("1_b7rtl")
region = Rect2(490, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_u18tt"]
atlas = ExtResource("1_b7rtl")
region = Rect2(539, 0, 49, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ncal"]
atlas = ExtResource("3_rskb6")
region = Rect2(0, 0, 44, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bvyf"]
atlas = ExtResource("3_rskb6")
region = Rect2(44, 0, 44, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovblo"]
atlas = ExtResource("3_rskb6")
region = Rect2(88, 0, 44, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0llo"]
atlas = ExtResource("3_rskb6")
region = Rect2(132, 0, 44, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fcbp"]
atlas = ExtResource("3_rskb6")
region = Rect2(176, 0, 44, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8ky3"]
atlas = ExtResource("3_rskb6")
region = Rect2(220, 0, 44, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixtnw"]
atlas = ExtResource("3_rskb6")
region = Rect2(264, 0, 44, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t4el"]
atlas = ExtResource("3_rskb6")
region = Rect2(308, 0, 44, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3p6p"]
atlas = ExtResource("4_0h7mr")
region = Rect2(0, 0, 75, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct4iu"]
atlas = ExtResource("4_0h7mr")
region = Rect2(75, 0, 75, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_88obl"]
atlas = ExtResource("6_f5lf2")
region = Rect2(0, 0, 64, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_tenxc"]
atlas = ExtResource("6_f5lf2")
region = Rect2(64, 0, 64, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nag1"]
atlas = ExtResource("6_f5lf2")
region = Rect2(128, 0, 64, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k6o5"]
atlas = ExtResource("6_f5lf2")
region = Rect2(192, 0, 64, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_vue1j"]
atlas = ExtResource("6_008xp")
region = Rect2(0, 0, 61, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7xoe"]
atlas = ExtResource("6_008xp")
region = Rect2(61, 0, 61, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_g402t"]
atlas = ExtResource("4_paw7p")
region = Rect2(0, 0, 46, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kawl"]
atlas = ExtResource("4_paw7p")
region = Rect2(46, 0, 46, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4a1l"]
atlas = ExtResource("4_81tlj")
region = Rect2(0, 0, 53, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhblq"]
atlas = ExtResource("4_81tlj")
region = Rect2(53, 0, 53, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_10atw"]
atlas = ExtResource("4_81tlj")
region = Rect2(106, 0, 53, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwlap"]
atlas = ExtResource("4_81tlj")
region = Rect2(159, 0, 53, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_8htjp"]
atlas = ExtResource("4_81tlj")
region = Rect2(212, 0, 53, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxcjf"]
atlas = ExtResource("4_81tlj")
region = Rect2(265, 0, 53, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxug3"]
atlas = ExtResource("4_81tlj")
region = Rect2(318, 0, 53, 106)

[sub_resource type="SpriteFrames" id="SpriteFrames_16wbm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3aa8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4yn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5d47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wajqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kdpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xonh")
}],
"loop": false,
"name": &"FrontPunch",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s20b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8f1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow1bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivx3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s20b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8f1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow1bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivx3k")
}],
"loop": false,
"name": &"bikeKick",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wnbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jogx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx5wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jxgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pck2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_702fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wns1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yi1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oal76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp8g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etr4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u18tt")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ncal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bvyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovblo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0llo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fcbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8ky3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixtnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t4el")
}],
"loop": false,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3p6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct4iu")
}],
"loop": false,
"name": &"jumpSkill",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88obl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tenxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nag1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k6o5")
}],
"loop": false,
"name": &"kick",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vue1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7xoe")
}],
"loop": false,
"name": &"punch",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g402t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kawl")
}],
"loop": false,
"name": &"skill1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4a1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhblq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10atw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwlap")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_8htjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxcjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxug3")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w6sjw"]
height = 86.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kl0vx"]
height = 69.3333

[node name="LiuKang" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_mask = 20
script = ExtResource("1_o0xhx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_16wbm")
animation = &"punch"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 5.66667)
shape = SubResource("CapsuleShape2D_w6sjw")

[node name="SkillDragon" type="Marker2D" parent="."]
position = Vector2(40.667, -28)

[node name="SkillMelee" type="Area2D" parent="."]
position = Vector2(17.3333, -1.33333)
collision_layer = 8
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkillMelee"]
position = Vector2(-20, -7.66667)
shape = SubResource("CapsuleShape2D_kl0vx")
debug_color = Color(0, 0, 0, 0.419608)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="SkillMelee" to="." method="_on_hit_box_area_entered"]
